[gd_scene load_steps=4 format=3 uid="uid://r2665t0061bo"]

[ext_resource type="Script" path="res://Main Menu/BossSceneFinalReal.gd" id="1_ljune"]
[ext_resource type="FontFile" uid="uid://c6tb3nafm5nx5" path="res://Resources/Fonts/NESCyrillic.ttf" id="2_asid0"]
[ext_resource type="AudioStream" uid="uid://b58c4mtarn6x4" path="res://Resources/Music/202 Sprouting.mp3" id="3_216tt"]

[node name="EventChoice" type="Node2D"]
script = ExtResource("1_ljune")

[node name="EventDetailsColor" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 496.0
color = Color(0, 0.498039, 0.0941176, 1)

[node name="EventDetailsColor2" type="ColorRect" parent="."]
offset_top = 496.0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0, 0.576471, 0.0941176, 1)

[node name="EventTitle" type="RichTextLabel" parent="."]
offset_left = 20.0
offset_top = 44.0
offset_right = 1128.0
offset_bottom = 102.0
size_flags_stretch_ratio = 3.55
theme_override_fonts/normal_font = ExtResource("2_asid0")
theme_override_font_sizes/normal_font_size = 65
text = "End of the world"

[node name="EventDescription" type="RichTextLabel" parent="."]
offset_left = 20.0
offset_top = 157.0
offset_right = 763.0
offset_bottom = 404.0
size_flags_stretch_ratio = 3.55
theme_override_fonts/normal_font = ExtResource("2_asid0")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "At journey's end you come face to face with the greatest evil, the source of all chaos, the volcanic bird. It believes you are worthy to deliver chaos alongside it. What do you do?"

[node name="Option A" type="Button" parent="."]
offset_left = 201.0
offset_top = 543.0
offset_right = 408.0
offset_bottom = 611.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_asid0")
theme_override_font_sizes/font_size = 30
text = "Join"

[node name="Option B" type="Button" parent="."]
offset_left = 763.0
offset_top = 543.0
offset_right = 970.0
offset_bottom = 611.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_asid0")
theme_override_font_sizes/font_size = 30
text = "Annihilate"

[node name="Proceed" type="Button" parent="."]
visible = false
offset_left = 480.0
offset_top = 544.0
offset_right = 687.0
offset_bottom = 612.0
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_asid0")
theme_override_font_sizes/font_size = 30
text = "Proceed"

[node name="Event Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_216tt")
autoplay = true

[connection signal="pressed" from="Option A" to="." method="_on_option_a_pressed"]
[connection signal="pressed" from="Option B" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="Proceed" to="." method="_on_proceed_pressed"]
